# cloudish

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: test.yml
app/: Cargo.toml
app/src/: edge_wire_log.rs  lib.rs  main.rs  transport.rs
app/src/hosting/: mod.rs  plan.rs
app/tests/: cli.rs
auth/: Cargo.toml
auth/src/: aws_chunked.rs  lib.rs  sigv4.rs
aws/: Cargo.toml
aws/src/: account_id.rs  arn.rs  caller_credentials.rs  credential_scope.rs  edge_addressing.rs  error.rs  execute_api_source_arn.rs  iam_identity.rs  kms_key_reference.rs  lambda_function_target.rs  lib.rs  pagination_token.rs  region_id.rs  request_context.rs  runtime.rs  runtime_defaults.rs  service_name.rs  session_credentials.rs
edge-protocol/: Cargo.toml
edge-protocol/src/: lib.rs  request.rs  response.rs
edge-runtime/: Cargo.toml
edge-runtime/src/: builders.rs  composition.rs  lib.rs  runtime_services.rs
edge-runtime/src/adapters/: elasticache.rs  fakes.rs  filesystem.rs  lambda.rs  mod.rs  network.rs  process.rs  rds.rs  runtime.rs
edge-runtime/src/composition/: apigateway.rs  eventbridge.rs  lambda_background.rs  mod.rs  s3_notifications.rs  sns.rs  step_functions.rs
http/: Cargo.toml
http/src/: apigateway.rs  apigateway_v2.rs  aws_error_shape.rs  cloudformation.rs  cloudwatch.rs  cognito.rs  dynamodb.rs  elasticache.rs  eventbridge.rs  iam_query.rs  kinesis.rs  kms.rs  lambda.rs  lib.rs  query.rs  rds.rs  request.rs  runtime.rs  s3.rs  s3_bucket_encoding.rs  s3_bucket_request_parsing.rs  s3_bucket_routes.rs  s3_copy_parsing.rs  s3_error_encoding.rs  s3_object_encoding.rs  s3_object_lock_parsing.rs  s3_object_reads.rs  s3_object_request_parsing.rs  s3_object_responses.rs  s3_object_routes.rs  s3_query_parsing.rs  s3_request_normalization.rs  s3_request_parsing.rs  s3_response_encoding.rs  s3_select_encoding.rs  s3_tests.rs  s3_xml.rs  secrets_manager.rs  services.rs  sns.rs  (+6 more)
http/src/routing/: catalog.rs  dispatch.rs  mod.rs
http/src/sqs/: json_protocol.rs  message_attributes.rs  mod.rs  query_protocol.rs
services/apigateway/: Cargo.toml
services/apigateway/src/: authorizers.rs  deployments.rs  errors.rs  execute_api.rs  http_api.rs  integrations.rs  lib.rs  rest_api.rs  scope.rs  stages.rs  state.rs  v2.rs
services/cloudformation/: Cargo.toml
services/cloudformation/src/: errors.rs  lib.rs  planning.rs  providers.rs  scope.rs  stacks.rs  state.rs  template.rs
services/cloudwatch/: Cargo.toml
services/cloudwatch/src/: errors.rs  lib.rs  logs.rs  metrics.rs  scope.rs
services/cognito/: Cargo.toml
services/cognito/src/: auth.rs  clients.rs  errors.rs  identifiers.rs  jwks.rs  lib.rs  scope.rs  state.rs  user_pools.rs  users.rs
services/dynamodb/: Cargo.toml
services/dynamodb/src/: errors.rs  expressions.rs  item_ops.rs  lib.rs  query_scan.rs  scope.rs  state.rs  table_ops.rs  transactions.rs  types.rs
services/elasticache/: Cargo.toml
services/elasticache/src/: auth.rs  errors.rs  identifiers.rs  lib.rs  runtime.rs  (+3 more)
services/eventbridge/: Cargo.toml
services/iam/: Cargo.toml
services/kinesis/: Cargo.toml
services/kms/: Cargo.toml
services/kms/src/: aliases.rs  crypto.rs  errors.rs  keys.rs  lib.rs  scope.rs
services/lambda/: Cargo.toml
services/lambda/src/: aliases.rs  arns.rs  async_delivery.rs  code.rs  errors.rs  event_source_mappings.rs  functions.rs  invocation.rs  lib.rs  permissions.rs  request_runtime.rs  scope.rs  state.rs  urls.rs  versions.rs
services/rds/: Cargo.toml
services/s3/: Cargo.toml
services/s3/src/: bucket.rs  bucket_subresources.rs  errors.rs  lib.rs  multipart.rs  notifications.rs  object.rs  object_listing.rs  object_ranges.rs  object_read_conditions.rs  object_read_model.rs  object_reads.rs  object_writes.rs  retention.rs  scope.rs  serialization.rs  state.rs  state_test_support.rs  state_tests.rs  tagging.rs
services/secrets-manager/: Cargo.toml
services/secrets-manager/src/: errors.rs  lib.rs  lifecycle.rs  scope.rs  secrets.rs  versions.rs
services/sns/: Cargo.toml
services/sns/src/: delivery.rs  errors.rs  lib.rs  pagination.rs  scope.rs  subscriptions.rs  topics.rs
services/sqs/: Cargo.toml
services/sqs/src/: attributes.rs  errors.rs  fifo.rs  lib.rs  message_attributes.rs  messages.rs  queues.rs  redrive.rs  request_runtime.rs  scope.rs  tests.rs
services/ssm/: Cargo.toml
services/ssm/src/: errors.rs  filters.rs  history.rs  labels.rs  lib.rs  parameters.rs  scope.rs
services/step-functions/: Cargo.toml
services/step-functions/src/: choice_eval.rs  definitions.rs  errors.rs  executions.rs  history.rs  lib.rs  scope.rs  state.rs  tasks.rs
services/sts/: Cargo.toml
services/sts/src/: assume_role.rs  caller.rs  credentials.rs  federation.rs  lib.rs  tests.rs  trust_policy.rs  validation.rs
storage/: Cargo.toml
storage/src/: backend.rs  error.rs  factory.rs  hybrid.rs  json_persistent.rs  lib.rs  memory.rs  scheduler.rs  scope.rs  snapshot.rs  wal.rs
storage/tests/: backends.rs
test-support/: Cargo.toml
test-support/src/: lib.rs
test-support/tests/: workspace_dependency_contract.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/common/: cognito.rs  elasticache.rs  http_fixture.rs  lambda.rs  mod.rs  rds.rs  runtime.rs  sdk.rs
tests/tests/: apigw_v1_control.rs  apigw_v1_runtime.rs  apigw_v2_control.rs  apigw_v2_runtime.rs  cloudformation_parser.rs  cloudformation_providers.rs  cloudwatch_logs.rs  cloudwatch_metrics.rs  cognito_auth.rs  cognito_control.rs  core_runtime.rs  dynamodb_core.rs  dynamodb_transactions.rs  elasticache_control.rs  eventbridge.rs  iam_access_keys.rs  iam_principals.rs  kinesis_streams.rs  kms_lifecycle_crypto.rs  lambda_core.rs  lambda_url.rs  rds_control.rs  s3_advanced.rs  s3_core.rs  s3_notifications.rs  s3_streaming.rs  secrets_manager_lifecycle.rs  sns_core.rs  sns_delivery.rs  sqs_fifo.rs  sqs_standard.rs  ssm_parameter_store.rs  step_functions_execution_subset.rs  storage.rs  sts.rs
tests/tests/common/: cognito.rs  elasticache.rs  http_fixture.rs  lambda.rs  rds.rs  runtime.rs  sdk.rs
(+36 files in other folders)
