[workspace]
members = [
    "app",
    "auth",
    "aws",
    "edge-protocol",
    "edge-runtime",
    "http",
    "services/apigateway",
    "services/cloudformation",
    "services/cloudwatch",
    "services/cognito",
    "services/dynamodb",
    "services/elasticache",
    "services/eventbridge",
    "services/iam",
    "services/kinesis",
    "services/kms",
    "services/lambda",
    "services/rds",
    "services/s3",
    "services/secrets-manager",
    "services/sns",
    "services/sqs",
    "services/ssm",
    "services/step-functions",
    "services/sts",
    "storage",
    "test-support",
    "tests",
]
default-members = ["app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.89"
version = "0.1.0"

[workspace.dependencies]
ciborium = "0.2.2"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread", "signal", "time", "net", "sync"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Deny
dbg_macro = "deny"
disallowed_methods = "deny"
print_stderr = "deny"
print_stdout = "deny"
missing_safety_doc = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
unreachable = "deny"

# Allow
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
collapsible_else_if = "allow"
if_same_then_else = "allow"
let_and_return = "allow" # sometimes good to name what you are returning
needless_continue = "allow"
result_large_err = "allow"

# Warn
checked_conversions = "warn"
cognitive_complexity = "warn"
create_dir = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
expect_used = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
panic = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
type_complexity = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
indexing_slicing = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_inception = "warn"
redundant_clone = "warn"
set_contains_or_insert = "warn"
single_char_pattern = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_to_owned = "warn"
unused_async = "warn"
get_unwrap = "warn"
