[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
apigateway = { path = "../services/apigateway" }
async-trait = "0.1.89"
auth = { path = "../auth" }
aws = { path = "../aws" }
base64 = "0.22.1"
bytes = "1.10.1"
cloudformation = { path = "../services/cloudformation" }
cloudwatch = { path = "../services/cloudwatch" }
cognito = { path = "../services/cognito" }
dynamodb = { path = "../services/dynamodb" }
elasticache = { path = "../services/elasticache" }
eventbridge = { path = "../services/eventbridge" }
edge-runtime = { path = "../edge-runtime" }
futures = "0.3.32"
getrandom = "0.2"
http = { path = "../http" }
iam = { path = "../services/iam" }
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
kinesis = { path = "../services/kinesis" }
kms = { path = "../services/kms" }
lambda = { path = "../services/lambda" }
opensrv-mysql = { version = "0.7.0", default-features = false }
pgwire = { version = "0.38.2", default-features = false, features = ["server-api"] }
rds = { path = "../services/rds" }
s3 = { path = "../services/s3" }
secrets-manager = { path = "../services/secrets-manager" }
serde_json.workspace = true
sha1 = "0.10.6"
sns = { path = "../services/sns" }
sqs = { path = "../services/sqs" }
ssm = { path = "../services/ssm" }
step-functions = { path = "../services/step-functions" }
storage = { path = "../storage" }
sts = { path = "../services/sts" }
time = { version = "0.3.47", features = ["formatting"] }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "signal", "time", "net", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }
urlencoding = "2.1.3"
zip = "0.6.6"

[dev-dependencies]
httpdate = "1.0.3"
test-support = { path = "../test-support" }
