[package]
name = "edge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
apigateway = { path = "../services/apigateway" }
async-trait = "0.1.89"
auth = { path = "../auth" }
aws = { path = "../aws" }
base64 = "0.22.1"
cloudformation = { path = "../services/cloudformation" }
cloudwatch = { path = "../services/cloudwatch" }
cognito = { path = "../services/cognito" }
dynamodb = { path = "../services/dynamodb" }
elasticache = { path = "../services/elasticache" }
eventbridge = { path = "../services/eventbridge" }
futures = "0.3.32"
getrandom = "0.2"
iam = { path = "../services/iam" }
kinesis = { path = "../services/kinesis" }
kms = { path = "../services/kms" }
lambda = { path = "../services/lambda" }
opensrv-mysql = { version = "0.7.0", default-features = false }
pgwire = { version = "0.38.2", default-features = false, features = ["server-api"] }
rds = { path = "../services/rds" }
rsa = "0.9.8"
s3 = { path = "../services/s3" }
secrets-manager = { path = "../services/secrets-manager" }
serde.workspace = true
serde_json.workspace = true
sha1 = { version = "0.10.6", features = ["oid"] }
sns = { path = "../services/sns" }
sqs = { path = "../services/sqs" }
ssm = { path = "../services/ssm" }
step-functions = { path = "../services/step-functions" }
storage = { path = "../storage" }
sts = { path = "../services/sts" }
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting"] }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "signal", "time", "net", "sync"] }
urlencoding = "2.1.3"
zip = "0.6.6"

[dev-dependencies]
httpdate = "1.0.3"
test-support = { path = "../test-support" }
