[package]
name = "http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
apigateway = { path = "../services/apigateway" }
auth = { path = "../auth" }
aws = { path = "../aws" }
aws-smithy-eventstream = "=0.60.6"
aws-smithy-types = "=1.3.5"
base64 = "0.22.1"
bytes = "1.10.1"
ciborium.workspace = true
cloudformation = { path = "../services/cloudformation" }
cloudwatch = { path = "../services/cloudwatch" }
cognito = { path = "../services/cognito" }
dynamodb = { path = "../services/dynamodb" }
edge-protocol = { path = "../edge-protocol" }
elasticache = { path = "../services/elasticache" }
eventbridge = { path = "../services/eventbridge" }
edge-runtime = { path = "../edge-runtime" }
httpdate = "1.0.3"
iam = { path = "../services/iam" }
kinesis = { path = "../services/kinesis" }
kms = { path = "../services/kms" }
lambda = { path = "../services/lambda" }
quick-xml = { version = "0.37.5", features = ["serialize"] }
rds = { path = "../services/rds" }
s3 = { path = "../services/s3" }
secrets-manager = { path = "../services/secrets-manager" }
serde.workspace = true
serde_json.workspace = true
sns = { path = "../services/sns" }
sqs = { path = "../services/sqs" }
ssm = { path = "../services/ssm" }
step-functions = { path = "../services/step-functions" }
sts = { path = "../services/sts" }
time = { version = "0.3.47", features = ["formatting"] }
urlencoding = "2.1.3"

[dev-dependencies]
hmac = "0.12.1"
sha2 = "0.10.9"
storage = { path = "../storage" }
zip = "0.6.6"
