[package]
name = "tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
app = { path = "../app" }
auth = { path = "../auth" }
aws = { path = "../aws" }
aws-config = { version = "=1.5.17", default-features = false, features = ["rt-tokio"] }
aws-credential-types = "=1.2.1"
aws-sdk-apigateway = "=1.62.0"
aws-sdk-apigatewayv2 = "=1.62.0"
aws-sdk-cloudformation = "=1.62.0"
aws-sdk-cloudwatch = "=1.62.0"
aws-sdk-cloudwatchlogs = "=1.62.0"
aws-sdk-cognitoidentityprovider = "=1.62.0"
aws-sdk-dynamodb = "=1.62.0"
aws-sdk-dynamodbstreams = "=1.60.0"
aws-sdk-elasticache = "=1.62.0"
aws-sdk-eventbridge = "=1.62.0"
aws-sdk-iam = "=1.62.0"
aws-sdk-kinesis = "=1.62.0"
aws-sdk-kms = "=1.62.0"
aws-sdk-lambda = "=1.62.0"
aws-sdk-rds = "=1.62.0"
aws-sdk-s3 = "=1.62.0"
aws-sdk-secretsmanager = "=1.62.0"
aws-sdk-sfn = "=1.62.0"
aws-sdk-sns = "=1.62.0"
aws-sdk-sqs = "=1.60.0"
aws-sdk-ssm = "=1.62.0"
aws-sdk-sts = "=1.62.0"
aws-smithy-runtime = { version = "=1.7.8", default-features = false, features = ["client", "connector-hyper-0-14-x", "rt-tokio"] }
base64 = "0.22.1"
ciborium.workspace = true
hmac = "0.12.1"
httpdate = "1.0.3"
hyper = { version = "0.14.32", features = ["client", "tcp"] }
jsonwebtoken = "=9.3.0"
mysql_async = "0.36.1"
redis = { version = "0.29.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
storage = { path = "../storage" }
test-support = { path = "../test-support" }
time = { version = "0.3.47", features = ["formatting"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
tokio-postgres = "0.7.16"
