[package]
name = "dynamodb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
base64 = "0.22.1"
regex-lite = "0.1.9"
serde.workspace = true
serde_json.workspace = true
storage = { path = "../../storage" }
thiserror.workspace = true
