[package]
name = "kms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
base64 = "0.22.1"
serde.workspace = true
sha2 = "0.10.9"
storage = { path = "../../storage" }
thiserror.workspace = true
