[package]
name = "lambda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
base64 = "0.22.1"
iam = { path = "../iam" }
s3 = { path = "../s3" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
sqs = { path = "../sqs" }
storage = { path = "../../storage" }
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting"] }
