[package]
name = "s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
base64 = "0.22.1"
csv = "1.3.1"
md5 = "0.7.0"
regex-lite = "0.1.9"
serde.workspace = true
serde_json.workspace = true
storage = { path = "../../storage" }
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting"] }
urlencoding = "2.1.3"
