[package]
name = "sns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting"] }
