[package]
name = "ssm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
serde.workspace = true
storage = { path = "../../storage" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
