[package]
name = "step-functions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
serde.workspace = true
serde_json.workspace = true
storage = { path = "../../storage" }
thiserror.workspace = true
