[package]
name = "sts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aws = { path = "../../aws" }
base64 = "0.22.1"
iam = { path = "../iam" }
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting"] }
